upward pageshift (overlapping navbar) fixed

--- a/src/styles/amb.module.css
+++ b/src/styles/amb.module.css
@@ -10,18 +10,17 @@
     height: 130vh;
     /* background-color: #2B2B2B; */
     position: relative;
-    display: flex;
-    
-    
-    
+    top:73px;
+    display: flex;   
 }
 
 .intro
 {
     position: absolute;
     width: 35%;
-    
+    margin-left:2vh;
     color: white;
+    z-index:10;
 }
 .mainImg
 {
@@ -46,8 +45,6 @@
     line-height: 2.2rem;
     font-family: 'wity2';
     font-size: 2.3rem;
-    z-index:10;
-    
     
 }
 .introSub
@@ -55,7 +52,6 @@
     font-family: 'wity';
      color: rgba(255, 255, 255, 0.8);
      font-size: 0.8rem;
-     z-index:10;
     
 }
 .introBtn
@@ -259,7 +255,7 @@ border-radius: 5px;
     left:-20vh;
     top:-29vh;
     animation:anim 3s linear infinite;
-    z-index:-1;
+    z-index:-2;
 }
 
 @keyframes anim {
